Azure/CR-CrimeAPI-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cr-crimeapi-depl
  namespace: cr
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: cr-crimeapi
  template:
    metadata:
      labels:
        app: cr-crimeapi
    spec:
      containers:
        - name: cr-crimeapi
          image: crime.azurecr.io/crimeapi
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: cr-crimeapi
  namespace: cr
spec:
  type: ClusterIP
  selector:
    app: cr-crimeapi
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
